# email_newsletter

./: .config.json  .container_id  .dockerignore  .env  .gitignore  .pgpass  .pgpass_db  Cargo.toml  Dockerfile  Justfile  compose.yaml  echo  email.Dockerfile  test.sh
config/: base.yaml  local.yaml  production.yaml
configuration/: base.yaml
email_rmq/: Dockerfile  README.md  email_rmq.sln  rmq_email.csproj
email_rmq/src/: Program.cs
scripts/: clean_db.sh  cleaning.sh  drop_mock_db.sh  env.sh  init_db.sh  valid_http_str.sh
server_rs/: Cargo.toml  Dockerfile  README.md
server_rs/config/: base.yaml  local.yaml  production.yaml
server_rs/src/: configuration.rs  email_client.rs  email_rmq.rs  lib.rs  main.rs  startup.rs  telemetry.rs
server_rs/src/routes/: subscriptions.rs
server_rs/tests/: health_check.rs
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
