[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
config = "0.13.3"
log = "0.4.20"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.33.0", features = ["macros", "fs", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
once_cell = "1.18.0"
reqwest = "0.11.22"
