[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.77"
chrono = "0.4.31"
config = "0.13.3"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "blocking", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.108"
thiserror = "1.0.52"
tracing = "0.1.40"
tracing-actix-web = "0.7.8"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.5.0", features = ["v4"] }
validator = "0.16.1"
wiremock = "0.5.22"

[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dependencies.tokio]
version = "1.33.0"
features = ["macros", "fs", "rt-multi-thread"]


[dev-dependencies]
claim = "0.5.0"
fake = "~2.3"
once_cell = "1.18.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

